Updated tests to use NaisEnvironmentApplicationContextInitializer.